Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15700

Crash with "Change Kit"

    XMLWordPrintable

Details

    • f56363f07b936926119f7fbf3ca37998046ea0fa

    Description

      Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
      0   libProjectExplorer_debug.dylib	0x000000011811de3c QObject::parent() const + 28 (qobject.h:419)
      1   libProjectExplorer_debug.dylib	0x0000000118287215 ProjectExplorer::RunConfiguration::target() const + 21 (runconfiguration.cpp:299)
      2   libQmakeProjectManager_debug.dylib	0x000000011db9d9f5 QmakeProjectManager::Internal::DesktopQmakeRunConfiguration::qmakeProject() const + 21 (desktopqmakerunconfiguration.cpp:421)
      3   libQmakeProjectManager_debug.dylib	0x000000011dba0979 QmakeProjectManager::Internal::DesktopQmakeRunConfiguration::projectNode() const + 25 (desktopqmakerunconfiguration.cpp:426)
      4   libQmakeProjectManager_debug.dylib	0x000000011dba12a5 QmakeProjectManager::Internal::DesktopQmakeRunConfiguration::addToBaseEnvironment(Utils::Environment&) const + 229 (desktopqmakerunconfiguration.cpp:394)
      5   libQmakeProjectManager_debug.dylib	0x000000011dba34d0 QmakeProjectManager::Internal::DesktopQmakeRunConfiguration::DesktopQmakeRunConfiguration(ProjectExplorer::Target*, Core::Id)::$_0::operator()(Utils::Environment&) const + 32 (desktopqmakerunconfiguration.cpp:83)
      6   libQmakeProjectManager_debug.dylib	0x000000011dba349d _ZNSt3__128__invoke_void_return_wrapperIvE6__callIJRZN19QmakeProjectManager8Internal28DesktopQmakeRunConfigurationC1EPN15ProjectExplorer6TargetEN4Core2IdEE3$_0RN5Utils11EnvironmentEEEEvDpOT_ + 77 (__functional_base:441)
      7   libQmakeProjectManager_debug.dylib	0x000000011dba337c std::__1::__function::__func<QmakeProjectManager::Internal::DesktopQmakeRunConfiguration::DesktopQmakeRunConfiguration(ProjectExplorer::Target*, Core::Id)::$_0, std::__1::allocator<QmakeProjectManager::Internal::DesktopQmakeRunConfiguration::DesktopQmakeRunConfiguration(ProjectExplorer::Target*, Core::Id)::$_0>, void (Utils::Environment&)>::operator()(Utils::Environment&) + 60 (functional:1407)
      8   libProjectExplorer_debug.dylib	0x00000001181653d7 std::__1::function<void (Utils::Environment&)>::operator()(Utils::Environment&) const + 151 (functional:1793)
      9   libProjectExplorer_debug.dylib	0x0000000118164f58 ProjectExplorer::LocalEnvironmentAspect::baseEnvironment() const + 520 (localenvironmentaspect.cpp:76)
      10  libProjectExplorer_debug.dylib	0x000000011814a72b ProjectExplorer::EnvironmentAspect::environment() const + 43 (environmentaspect.cpp:89)
      11  libProjectExplorer_debug.dylib	0x0000000118349545 ProjectExplorer::WorkingDirectoryAspect::addToMainConfigurationWidget(QWidget*, QFormLayout*)::$_2::operator()() const + 69 (runconfigurationaspects.cpp:172)
      12  libProjectExplorer_debug.dylib	0x00000001183494e0 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, ProjectExplorer::WorkingDirectoryAspect::addToMainConfigurationWidget(QWidget*, QFormLayout*)::$_2>::call(ProjectExplorer::WorkingDirectoryAspect::addToMainConfigurationWidget(QWidget*, QFormLayout*)::$_2, void**) + 32 (qobjectdefs_impl.h:495)
      13  libProjectExplorer_debug.dylib	0x0000000118349498 void QtPrivate::Functor<ProjectExplorer::WorkingDirectoryAspect::addToMainConfigurationWidget(QWidget*, QFormLayout*)::$_2, 0>::call<QtPrivate::List<>, void>(ProjectExplorer::WorkingDirectoryAspect::addToMainConfigurationWidget(QWidget*, QFormLayout*)::$_2&, void*, void**) + 56 (qobjectdefs_impl.h:553)
      14  libProjectExplorer_debug.dylib	0x0000000118349411 QtPrivate::QFunctorSlotObject<ProjectExplorer::WorkingDirectoryAspect::addToMainConfigurationWidget(QWidget*, QFormLayout*)::$_2, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 145 (qobject_impl.h:193)
      15  org.qt-project.QtCore         	0x00000001110aa401 QMetaObject::activate(QObject*, int, int, void**) + 2801
      16  libProjectExplorer_debug.dylib	0x0000000118423435 ProjectExplorer::EnvironmentAspect::environmentChanged() + 37 (moc_environmentaspect.cpp:168)
      17  libProjectExplorer_debug.dylib	0x0000000118164fd6 ProjectExplorer::LocalEnvironmentAspect::buildEnvironmentHasChanged() + 54 (localenvironmentaspect.cpp:85)
      18  libQmakeProjectManager_debug.dylib	0x000000011db9e063 QmakeProjectManager::Internal::DesktopQmakeRunConfiguration::proFileUpdated(QmakeProjectManager::QmakeProFileNode*, bool, bool) + 515 (desktopqmakerunconfiguration.cpp:136)
      19  libQmakeProjectManager_debug.dylib	0x000000011dba56ac QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1, 2>, QtPrivate::List<QmakeProjectManager::QmakeProFileNode*, bool, bool>, void, void (QmakeProjectManager::Internal::DesktopQmakeRunConfiguration::*)(QmakeProjectManager::QmakeProFileNode*, bool, bool)>::call(void (QmakeProjectManager::Internal::DesktopQmakeRunConfiguration::*)(QmakeProjectManager::QmakeProFileNode*, bool, bool), QmakeProjectManager::Internal::DesktopQmakeRunConfiguration*, void**) + 188 (qobjectdefs_impl.h:501)
      20  libQmakeProjectManager_debug.dylib	0x000000011dba55c0 void QtPrivate::FunctionPointer<void (QmakeProjectManager::Internal::DesktopQmakeRunConfiguration::*)(QmakeProjectManager::QmakeProFileNode*, bool, bool)>::call<QtPrivate::List<QmakeProjectManager::QmakeProFileNode*, bool, bool>, void>(void (QmakeProjectManager::Internal::DesktopQmakeRunConfiguration::*)(QmakeProjectManager::QmakeProFileNode*, bool, bool), QmakeProjectManager::Internal::DesktopQmakeRunConfiguration*, void**) + 80 (qobjectdefs_impl.h:521)
      21  libQmakeProjectManager_debug.dylib	0x000000011dba54e8 QtPrivate::QSlotObject<void (QmakeProjectManager::Internal::DesktopQmakeRunConfiguration::*)(QmakeProjectManager::QmakeProFileNode*, bool, bool), QtPrivate::List<QmakeProjectManager::QmakeProFileNode*, bool, bool>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 168 (qobject_impl.h:144)
      22  org.qt-project.QtCore         	0x00000001110aa401 QMetaObject::activate(QObject*, int, int, void**) + 2801
      23  libQmakeProjectManager_debug.dylib	0x000000011dbc408f QmakeProjectManager::QmakeProject::proFileUpdated(QmakeProjectManager::QmakeProFileNode*, bool, bool) + 111 (moc_qmakeproject.cpp:172)
      24  libQmakeProjectManager_debug.dylib	0x000000011db0b7b8 QmakeProjectManager::QmakeProFileNode::setParseInProgress(bool) + 120 (qmakenodes.cpp:1759)
      25  libQmakeProjectManager_debug.dylib	0x000000011db154a9 QmakeProjectManager::QmakeProFileNode::applyEvaluate(QmakeProjectManager::Internal::EvalResult*) + 7497 (qmakenodes.cpp:2303)
      26  libQmakeProjectManager_debug.dylib	0x000000011db0aee1 QmakeProjectManager::QmakeProFileNode::applyAsyncEvaluate() + 49 (qmakenodes.cpp:2092)
      27  libQmakeProjectManager_debug.dylib	0x000000011db165d8 QmakeProjectManager::QmakeProFileNode::QmakeProFileNode(QmakeProjectManager::QmakeProject*, Utils::FileName const&)::$_0::operator()() const + 24 (qmakenodes.cpp:1666)
      28  libQmakeProjectManager_debug.dylib	0x000000011db1659c QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, QmakeProjectManager::QmakeProFileNode::QmakeProFileNode(QmakeProjectManager::QmakeProject*, Utils::FileName const&)::$_0>::call(QmakeProjectManager::QmakeProFileNode::QmakeProFileNode(QmakeProjectManager::QmakeProject*, Utils::FileName const&)::$_0, void**) + 28 (qobjectdefs_impl.h:495)
      29  libQmakeProjectManager_debug.dylib	0x000000011db1654c _ZN9QtPrivate7FunctorIZN19QmakeProjectManager16QmakeProFileNodeC1EPNS1_12QmakeProjectERKN5Utils8FileNameEE3$_0Li0EE4callINS_4ListIJEEEvEEvRS9_PvPSF_ + 44 (qobjectdefs_impl.h:553)
      30  libQmakeProjectManager_debug.dylib	0x000000011db164d1 QtPrivate::QFunctorSlotObject<QmakeProjectManager::QmakeProFileNode::QmakeProFileNode(QmakeProjectManager::QmakeProject*, Utils::FileName const&)::$_0, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 145 (qobject_impl.h:193)
      31  org.qt-project.QtCore         	0x00000001110aa401 QMetaObject::activate(QObject*, int, int, void**) + 2801
      32  org.qt-project.QtCore         	0x0000000110eb4f79 QFutureWatcherBase::event(QEvent*) + 265
      33  org.qt-project.QtWidgets      	0x00000001100017e6 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 294
      34  org.qt-project.QtWidgets      	0x0000000110004130 QApplication::notify(QObject*, QEvent*) + 5648
      35  org.qt-project.QtCore         	0x0000000111076ac4 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 164
      36  org.qt-project.QtCore         	0x00000001110776e4 QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 596
      37  libqcocoa.dylib               	0x000000011457358e QCocoaEventDispatcherPrivate::processPostedEvents() + 190
      38  libqcocoa.dylib               	0x0000000114573e61 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void*) + 33
      39  com.apple.CoreFoundation      	0x00007fff98ae85c1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
      40  com.apple.CoreFoundation      	0x00007fff98ada41c __CFRunLoopDoSources0 + 556
      41  com.apple.CoreFoundation      	0x00007fff98ad993f __CFRunLoopRun + 927
      42  com.apple.CoreFoundation      	0x00007fff98ad9338 CFRunLoopRunSpecific + 296
      43  com.apple.HIToolbox           	0x00007fff950f3935 RunCurrentEventLoopInMode + 235
      44  com.apple.HIToolbox           	0x00007fff950f376f ReceiveNextEventCommon + 432
      45  com.apple.HIToolbox           	0x00007fff950f35af _BlockUntilNextEventMatchingListInModeWithFilter + 71
      46  com.apple.AppKit              	0x00007fff8e5aa0ee _DPSNextEvent + 1067
      47  com.apple.AppKit              	0x00007fff8e976943 -[NSApplication _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 454
      48  com.apple.AppKit              	0x00007fff8e59ffc8 -[NSApplication run] + 682
      49  libqcocoa.dylib               	0x0000000114572d5f QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2191
      50  org.qt-project.QtCore         	0x0000000111072e71 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 401
      51  org.qt-project.QtCore         	0x0000000111077135 QCoreApplication::exec() + 341
      52  org.qt-project.qtcreator      	0x000000010fa91ce3 main + 13075 (main.cpp:527)
      53  org.qt-project.qtcreator      	0x000000010fa8ab74 start + 52
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes